--- a/nginx.conf
+++ b/nginx.conf
@@ -12,40 +12,61 @@ http {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log warn;
 
+    # Resolver DNS do Docker
     resolver 127.0.0.11 valid=30s;
-
-    # Upstream com fallback
-    upstream dyndns_app {
-        # Primeiro tenta ddns_node, depois dyndns-app como fallback
-        server ddns_node:3000;
-        server dyndns-app:3000 backup;
-        keepalive 32;
-    }
 
     server {
         listen 80;
         server_name _;
 
+        # Variável para resolver DNS dinamicamente
+        set $backend "ddns_node:3000";
+
         location / {
-            # Proxy com timeout maior para debug
-            proxy_pass http://dyndns_app;
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 10s;
-            proxy_read_timeout 10s;
-            
+            # Resolver o backend dinamicamente
+            proxy_pass http://$backend;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Authorization $http_authorization;
             proxy_pass_header Authorization;
+            
+            # Timeouts
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 5s;
+            proxy_read_timeout 5s;
         }
 
-        # Health check interno
-        location /nginx-health {
+        # Health check do próprio nginx
+        location /nginx-status {
             access_log off;
             return 200 "nginx ok\n";
             add_header Content-Type text/plain;
+        }
+    }
+
+    # HTTPS
+    server {
+        listen 443 ssl http2;
+        server_name _;
+
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        set $backend "ddns_node:3000";
+
+        location / {
+            proxy_pass http://$backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header Authorization $http_authorization;
+            proxy_pass_header Authorization;
         }
     }
 }
