--- a/nginx.conf
+++ b/nginx.conf
@@ -33,10 +33,10 @@ http {
             proxy_set_header Authorization $http_authorization;
             proxy_pass_header Authorization;
             
-            # Timeouts
-            proxy_connect_timeout 5s;
-            proxy_send_timeout 5s;
-            proxy_read_timeout 5s;
+            # Timeouts aumentados
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 10s;
         }
 
         # Health check do próprio nginx
