--- a/nginx.conf
+++ b/nginx.conf
@@ -12,34 +12,37 @@ http {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log warn;
 
-    # Resolver DNS do Docker
-    resolver 127.0.0.11 valid=30s;
+    # Resolver DNS
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
 
     server {
         listen 80;
         server_name _;
 
-        # Variável para resolver DNS dinamicamente
-        set $backend "ddns_node:3000";
+        # URL EXTERNA DO EASYPANEL
+        set $backend "https://ddns-node.o6iwyv.easypanel.host";
 
         location / {
-            # Resolver o backend dinamicamente
-            proxy_pass http://$backend;
+            proxy_pass $backend;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
+            proxy_set_header Host ddns-node.o6iwyv.easypanel.host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Authorization $http_authorization;
             proxy_pass_header Authorization;
             
-            # Timeouts aumentados
+            # SSL para upstream
+            proxy_ssl_verify off;
+            proxy_ssl_server_name on;
+            
+            # Timeouts
             proxy_connect_timeout 10s;
             proxy_send_timeout 10s;
             proxy_read_timeout 10s;
         }
 
-        # Health check do próprio nginx
+        # Health check do nginx
         location /nginx-status {
             access_log off;
             return 200 "nginx ok\n";
@@ -54,19 +57,23 @@ http {
 
         ssl_certificate /etc/nginx/ssl/cert.pem;
         ssl_certificate_key /etc/nginx/ssl/key.pem;
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+        ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        set $backend "ddns_node:3000";
+        set $backend "https://ddns-node.o6iwyv.easypanel.host";
 
         location / {
-            proxy_pass http://$backend;
-            proxy_set_header Host $host;
+            proxy_pass $backend;
+            proxy_set_header Host ddns-node.o6iwyv.easypanel.host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
             proxy_set_header Authorization $http_authorization;
             proxy_pass_header Authorization;
+            
+            # SSL para upstream
+            proxy_ssl_verify off;
+            proxy_ssl_server_name on;
         }
     }
 }
